fix: solved problem with color-contrast bs5 function by reducing min-contrast-ratio
jira: ISPGROOT-168

--- a/projects/groot/src/style/_groot-variables.scss
+++ b/projects/groot/src/style/_groot-variables.scss
@@ -97,6 +97,11 @@ $theme-colors: (
         'download': $download,
 );
 
+/* Contrast value
+(this is needed with changed from bs4 to bs5) new constrast ratio is used
+and css variables aren't supported in new bs sass constrast-value function.
+This was the quickest solution found. */
+$min-contrast-ratio: 2.5;
 
 // NGX customizations
 
